--- a/config.yaml
+++ b/config.yaml
@@ -123,8 +123,16 @@ localization:
 # Mapping Parameters
 # ===========================================
 mapping:
+  # Local mapping
   cone_memory_search_radius: 10.0
   cone_memory_association_threshold: 1.0
+
+  # Cone sorting parameters for lane generation
+  max_connection_distance: 10.0
+  direction_weight: 0.5 # (0.0 ~1.0)
+
+  # Cone map refinement parameters
+  max_dist_from_lane: 2.0
 
 # ===========================================
 # Planning Parameters
