--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ perception:
   # LiDAR ROI extraction parameters
   lidar_roi_extraction:
     x_min: 0.0
-    x_max: 60.0
+    x_max: 50.0
     y_min: -30.0
     y_max: 30.0
     z_min: -10.0
@@ -33,6 +33,8 @@ perception:
 
   # Cone geometric constraints
   lidar_cone_detection:
+    cone_min_height: 0.1
+    cone_max_height: 0.5
     cone_min_radius: 0.00
     cone_max_radius: 0.7
     cone_min_points: 1
@@ -123,8 +125,16 @@ localization:
 # Mapping Parameters
 # ===========================================
 mapping:
+  # Local mapping
   cone_memory_search_radius: 10.0
   cone_memory_association_threshold: 1.0
+
+  # Cone sorting parameters for lane generation
+  max_connection_distance: 10.0
+  direction_weight: 0.5 # Path direction consistency weight (0.0 ~1.0)
+
+  # Cone map refinement parameters
+  max_dist_from_lane: 2.0
 
 # ===========================================
 # Planning Parameters
@@ -155,8 +165,8 @@ planning:
     total_laps: 10 # [laps]
 
     # Dynamic Start/Finish Line Detection (meters)
-    min_y_separation: 4.0  # track width
-    max_x_separation: 1.0  # cone offset
+    min_y_separation: 5.0  # track width
+    max_x_separation: 2.0  # cone offset
 
 # ===========================================
 # Control Parameters
@@ -179,6 +189,9 @@ control:
     pid_ki: 0.01
     pid_kd: 0.02
     max_throttle: 0.6
+
+    # Gain for steering-based speed dampening. Higher value means more aggressive slowing on turns.
+    steering_based_speed_gain: 0.2
 
   Vehicle:
     wheel_base: 1.55
