--- a/config.yaml
+++ b/config.yaml
@@ -143,7 +143,7 @@ planning:
   trajectory:
     # Basic trajectory generation
     lookahead_distance: 20.0
-    waypoint_spacing: 0.5
+    waypoint_spacing: 2.0
     default_speed: 3.0 # StopTrajectory
     
     # Cone-based path planning (meters)
@@ -154,16 +154,10 @@ planning:
     safety_margin: 0.5
 
     # Curvature-based speed planning
-    max_speed: 3.5
+    max_speed: 5.0
     min_speed: 1.0
-    #curvature_gain: 5.0
-     # NEW: Sigmoid function parameters for speed planning
-    sigmoid_k_gain: 150.0  # 시그모이드 함수의 기울기 (가파른 정도). 클수록 급격히 감속.
-    sigmoid_x_offset: 0.07 # 감속이 시작되는 곡률 지점. 클수록 더 높은 곡률에서 감속 시작.
-    # NEW: Path Smoothing Parameter
-    path_smoothing_factor: 0.5 # 0.0=스무딩 없음, 1.0에 가까울수록 매우 부드러워짐
-    # NEW: Speed Lookahead Parameter
-    speed_lookahead_distance: 2.0 # [m] 스로틀 제어를 위해 이 거리만큼 앞선 지점의 목표 속도를 사용
+    curvature_gain: 5.0
+
   behavior:
     # Lap Counting & Race Logic
     # total laps based on KSAE FSD rules
@@ -187,18 +181,18 @@ control:
     max_steer_angle: 1.0
 
   Stanley:
-    k_gain: 0.7
+    k_gain: 0.5
     k_gain_curvature_boost: 1.2
-
+    steering_lpf_alpha: 0.5  # <-- [추가] 값이 작을수록 부드러워집니다 (0.0 ~ 1.0)
   # PID Speed Control Parameters
   SpeedControl:
-    pid_kp: 0.3
-    pid_ki: 0.0
-    pid_kd: 0.0
-    max_throttle: 0.4
+    pid_kp: 0.7
+    pid_ki: 0.3
+    pid_kd: 0.3
+    max_throttle: 0.6
 
     # Steering-based speed dampening gain
-    steering_based_speed_gain: 0.0 # Higher value means more aggressive slowing on turns.
-
+    #steering_based_speed_gain: 5.0 # Higher value means more aggressive slowing on turns.
+    steering_sensitivity: 0.3      # 아크탄젠트함수 민감도
   Vehicle:
     wheel_base: 1.55
