--- a/config.yaml
+++ b/config.yaml
@@ -181,8 +181,9 @@ control:
     max_steer_angle: 1.0
 
   Stanley:
-    k_gain: 0.7
+    k_gain: 0.6
     k_gain_curvature_boost: 1.2
+    alpha: 0.5 # (stability(0.0) <---> response(1.0))
 
   # PID Speed Control Parameters
   SpeedControl:
