--- a/config.yaml
+++ b/config.yaml
@@ -144,7 +144,7 @@ planning:
     # Parameters used during the MAPPING lap
     mapping_mode:
       lookahead_distance: 3.0
-      waypoint_spacing: 0.2
+      waypoint_spacing: 0.5
       max_speed: 3.0
       lane_offset: 2.0
 
@@ -152,9 +152,18 @@ planning:
     racing_mode:
       lookahead_distance: 15.0
       waypoint_spacing: 0.5
-      max_speed: 7.0
+      max_speed: 8.0
       min_speed: 3.0
       curvature_gain: 3.8
+
+      # 👇 [교체] twistiness_logic 대신 complexity_logic 사용
+      complexity_logic:
+        enable: true
+        low_speed: 5.0          # 복잡 구간 최저 목표 속도
+
+        check_distance: 20.0         # 몇 미터 구간의 진동을 확인할 것인가 (단위: m)
+        vibration_max: 0.55           # 진동 지수가 이 값 이상이면 '복잡도 100%'로 간주
+        smoothing_window: 15         # 복잡도 점수를 부드럽게 만들기 위한 스무딩 창 크기
 
   behavioral_logic:
     # Lap Counting & Race Logic
@@ -193,16 +202,17 @@ control:
       max_steer_angle: 1.0
 
     Stanley:
-      k_gain: 1.8
-      k_gain_curvature_boost: 1.5
+      k_gain: 2.5
+      k_gain_curvature_boost: 1.6
       alpha: 1.0
 
     SpeedControl:
       pid_kp: 0.4
       pid_ki: 0.0
-      pid_kd: 0.02
+      pid_kd: 0.0
       max_throttle: 0.4
-      steering_based_speed_gain: 1.2
+      # steering_sensitivity: 10.0
+      # speed_control_steering_lpf_alpha: 0.95
 
   Vehicle:
     wheel_base: 1.55
