--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ perception:
   # LiDAR ROI extraction parameters
   lidar_roi_extraction:
     x_min: 0.0
-    x_max: 50.0
+    x_max: 40.0
     y_min: -30.0
     y_max: 30.0
     z_min: -10.0
@@ -29,7 +29,7 @@ perception:
   # DBSCAN clustering parameters
   lidar_clustering:
     dbscan_eps: 0.5
-    dbscan_min_points: 2
+    dbscan_min_points: 5
 
   # Cone geometric constraints
   lidar_cone_detection:
@@ -37,7 +37,7 @@ perception:
     cone_max_height: 0.5
     cone_min_radius: 0.00
     cone_max_radius: 0.7
-    cone_min_points: 1
+    cone_min_points: 3
 
   # LiDAR position relative to vehicle base (meters, degrees)
   lidar_extrinsics:
@@ -58,19 +58,19 @@ perception:
     principal_point_x: 320.0
     principal_point_y: 240.0
 
-  # Camera 1 (Left) position relative to vehicle base (meters, degrees)
+  # Camera 1 (Right) position relative to vehicle base (meters, degrees)
   camera1_extrinsics:
     translation_x: -0.43
-    translation_y: 0.15
+    translation_y: -0.15
     translation_z: 0.82
     rotation_roll: 0.0
     rotation_pitch: 0.0
     rotation_yaw: 0.0
 
-  # Camera 2 (Right) position relative to vehicle base (meters, degrees)
+  # Camera 2 (Left) position relative to vehicle base (meters, degrees)
   camera2_extrinsics:
     translation_x: -0.43
-    translation_y: -0.15
+    translation_y: 0.15
     translation_z: 0.82
     rotation_roll: 0.0
     rotation_pitch: 0.0
@@ -83,7 +83,7 @@ perception:
     bilateral_filter_diameter: 9
 
   camera_hsv_window_size:
-    window_size: 20
+    window_size: 15
 
   # HSV thresholds for yellow cone detection
   camera_hsv_yellow:
@@ -131,7 +131,7 @@ mapping:
 
   # Cone sorting parameters for lane generation
   max_connection_distance: 15.0
-  direction_weight: 0.5 # Path direction consistency weight (0.0 ~1.0)
+  direction_weight: 0.5 # Path direction consistency weight (0.0 ~ 1.0)
 
   # Cone map refinement parameters
   max_dist_from_lane: 2.0
@@ -140,33 +140,26 @@ mapping:
 # Planning Parameters
 # ===========================================
 planning:
-  trajectory:
-    # Basic trajectory generation
-    lookahead_distance: 20.0
-    waypoint_spacing: 2.0
-    default_speed: 3.0
-    
-    # Cone-based path planning (meters)
-    max_cone_distance: 25.0
-    lane_offset: 2.0
-    
-    # Safety parameters (meters)
-    safety_margin: 0.5
+  trajectory_generation:
+    # Parameters used during the MAPPING lap
+    mapping_mode:
+      lookahead_distance: 3.0
+      waypoint_spacing: 1
+      max_speed: 5.0
+      lane_offset: 2.0
 
-    # Curvature-based speed planning
-    max_speed: 3.0
-    min_speed: 1.0
-    curvature_gain: 5.0
+    # Parameters used during the RACING laps
+    racing_mode:
+      lookahead_distance: 15.0
+      waypoint_spacing: 3
+      max_speed: 8.0
+      min_speed: 5.0
+      curvature_gain: 3.8
 
-  behavior:
+  behavioral_logic:
     # Lap Counting & Race Logic
-    # total laps based on KSAE FSD rules
-    # total_laps includes the mapping lap (e.g. 10 laps = 1 mapping lap + 9 racing laps)
-    total_laps: 10 # [laps]
-
-    # Dynamic Start/Finish Line Detection (meters)
-    min_y_separation: 5.0  # track width
-    max_x_separation: 2.0  # cone offset
+    total_laps: 2
+    finish_stop_distance: 1.0
 
 # ===========================================
 # Control Parameters
@@ -174,24 +167,42 @@ planning:
 control:
   ControllerSelection:
     # lateral_controller_type: "PurePursuit", "Stanley"
-    lateral_controller_type: "Stanley" 
+    lateral_controller_type: "Stanley"
 
-  PurePursuit:
-    lookahead_distance: 5.0
-    max_steer_angle: 1.0
+  # Parameters used during the MAPPING lap
+  mapping_mode:
+    PurePursuit:
+      lookahead_distance: 5.0
+      max_steer_angle: 1.0
 
-  Stanley:
-    k_gain: 0.7
+    Stanley:
+      k_gain: 1.0
+      alpha: 1.0
 
-  # PID Speed Control Parameters
-  SpeedControl:
-    pid_kp: 0.5
-    pid_ki: 0.01
-    pid_kd: 0.02
-    max_throttle: 0.6
+    SpeedControl:
+      pid_kp: 0.3
+      pid_ki: 0.0
+      pid_kd: 0.01
+      max_throttle: 0.4
+      steering_based_speed_gain: 2.0
 
-    # Gain for steering-based speed dampening. Higher value means more aggressive slowing on turns.
-    steering_based_speed_gain: 0.2
+  # Parameters used during the RACING laps
+  racing_mode:
+    PurePursuit:
+      lookahead_distance: 8.0
+      max_steer_angle: 1.0
+
+    Stanley:
+      k_gain: 1.8
+      k_gain_curvature_boost: 1.5
+      alpha: 1.0
+
+    SpeedControl:
+      pid_kp: 0.8
+      pid_ki: 0.0
+      pid_kd: 0.03
+      max_throttle: 0.4
+      steering_based_speed_gain: 6.0
 
   Vehicle:
     wheel_base: 1.55
