--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ perception:
   # LiDAR ROI extraction parameters
   lidar_roi_extraction:
     x_min: 0.0
-    x_max: 40.0
+    x_max: 50.0
     y_min: -30.0
     y_max: 30.0
     z_min: -10.0
@@ -144,21 +144,31 @@ planning:
     # Parameters used during the MAPPING lap
     mapping_mode:
       lookahead_distance: 3.0
-      waypoint_spacing: 1
-      max_speed: 5.0
+      waypoint_spacing: 0.2
+      max_speed: 4.0
       lane_offset: 2.0
 
     # Parameters used during the RACING laps
     racing_mode:
       lookahead_distance: 15.0
-      waypoint_spacing: 3
-      max_speed: 8.0
+      waypoint_spacing: 0.5
+      max_speed: 9.0
       min_speed: 5.0
       curvature_gain: 3.8
 
+      # complexity_logic 사용
+      complexity_logic:
+        enable: true
+        low_speed: 5.0          # 복잡 구간 최저 목표 속도
+
+        check_distance: 15.0         # 몇 미터 구간의 진동을 확인할 것인가 (단위: m)
+        vibration_max: 0.55           # 진동 지수가 이 값 이상이면 '복잡도 100%'로 간주
+        smoothing_window: 20        # 복잡도 점수를 부드럽게 만들기 위한 스무딩 창 크기
+        score_decay_rate: 0.07 # <-- 이 라인을 추가 (값이 작을수록 매우 천천히 하락)
+
   behavioral_logic:
     # Lap Counting & Race Logic
-    total_laps: 2
+    total_laps: 10
     finish_stop_distance: 1.0
 
 # ===========================================
@@ -184,7 +194,7 @@ control:
       pid_ki: 0.0
       pid_kd: 0.01
       max_throttle: 0.4
-      steering_based_speed_gain: 0.0
+      steering_based_speed_gain: 2.0
 
   # Parameters used during the RACING laps
   racing_mode:
@@ -193,16 +203,17 @@ control:
       max_steer_angle: 1.0
 
     Stanley:
-      k_gain: 1.8
-      k_gain_curvature_boost: 1.5
+      k_gain: 2.5
+      k_gain_curvature_boost: 1.6
       alpha: 1.0
 
     SpeedControl:
-      pid_kp: 0.8
+      pid_kp: 0.5
       pid_ki: 0.0
       pid_kd: 0.03
       max_throttle: 0.4
-      steering_based_speed_gain: 6.0
+      # steering_sensitivity: 10.0
+      # speed_control_steering_lpf_alpha: 0.95
 
   Vehicle:
     wheel_base: 1.55
